refactor(controller): 删除多余的测试路由
