# docs/swagger.yaml
@@ -1,18 +1,5 @@
 basePath: /v1
 definitions:
-  controller.pushRequest:
-    properties:
-      body:
-        type: string
-      deviceToken:
-        type: string
-      title:
-        type: string
-    required:
-    - body
-    - deviceToken
-    - title
-    type: object
   dto.AnnouncementResponse:
     properties:
       content:
@@ -442,120 +429,4 @@ paths:
       summary: 同步电费推送任务
       tags:
       - task
-  /util/electricity:
-    get:
-      description: 根据校区、楼栋和房间号查询对应的电费余额
-      parameters:
-      - description: '校区名称 (例如: 云塘, 金盆岭)'
-        in: query
-        name: campus
-        required: true
-        type: string
-      - description: 楼栋名称
-        in: query
-        name: building
-        required: true
-        type: string
-      - description: 房间号
-        in: query
-        name: room
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: 查询电费余额
-      tags:
-      - util
-  /util/hello:
-    get:
-      description: 返回一个简单的hello world消息
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Hello World测试
-      tags:
-      - util
-  /util/profile:
-    get:
-      description: 使用提供的token获取用户档案信息
-      parameters:
-      - description: 用户Token
-        in: query
-        name: token
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: 获取用户个人信息
-      tags:
-      - util
-  /util/push:
-    post:
-      consumes:
-      - application/json
-      description: 使用提供的设备Token发送推送通知
-      parameters:
-      - description: 推送请求内容
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/controller.pushRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: 发送APNS推送消息
-      tags:
-      - util
 swagger: "2.0"
